--- a/index.html
+++ b/index.html
@@ -2282,7 +2282,7 @@ height: auto;
     display: grid;
     grid-template-columns: 0.45fr 1fr;
     column-gap: 0.3rem;
-    background: -webkit-linear-gradient(#e22020,#f83737f4);
+    background: -webkit-linear-gradient(#f91010,rgba(255, 31, 31, 0.927));
     display: grid;
     justify-content: space-between;
     justify-items: center;
@@ -2294,13 +2294,14 @@ height: auto;
     padding: 10px;
     margin-top: 0.75rem;
     border: 0.2rem solid rgb(0, 0, 0);
-    border-left: 0.6rem solid rgb(0, 0, 0);
-    border-right: 0.6rem solid rgb(0, 0, 0);
-    box-shadow: -1px 2px 0.5rem 2px rgba(31, 105, 180, 0.906);
+    border-radius: 0.5rem;
+    border-left: 0.65rem solid rgb(0, 0, 0);
+    border-right: 0.65rem solid rgb(0, 0, 0);
+    box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.672);
 }
 
 .DACA:hover{
-    box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.829);
+    box-shadow: -1px 2px 0.75rem 2px rgba(31, 105, 180, 0.843);
     transition: 0.26s linear;
     color:#fff;
     border: 0.18rem solid #000;
@@ -3575,8 +3576,8 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             color:#18a5d8fa;
-            font-size: 20.5px;
-            font-family: 'arial black';
+            font-size: 22px;
+            font-family: 'Kanit';
             width: 100%;
             height: 45px;
             padding: 10px;
@@ -4106,7 +4107,7 @@ function showSlides(n) {
             <a href="https://www.merriam-webster.com/dictionary/differently%20abled" target="_blank">
                
                 <div class="disabled">
-                * DON'T SEE ONLY MY DISABILITY | SEE ALSO MY ABILITY | WE ARE DIFFERENTLY ABLED *
+                <b> * DON'T SEE ONLY MY DISABILITY | SEE ALSO MY ABILITY | WE ARE DIFFERENTLY ABLED *</b>
                 </div>
             </a>
 
@@ -4179,13 +4180,13 @@ function showSlides(n) {
 
                 <a href="https://www.ampo-intl.org/en/panga-la-wende-wheelchair-project.html" target="_blank">
                     <div class="k-image22">
-                        <p style="text-align: left; font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255);">
+                        <p style="text-align: left; font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255);">
                             <b>
                                 What Tiki Yiki is Meaning ? What Tiki N'Yiki is Doing ?
                             </b>
                             </p>
 
-                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">
+                            <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;">
                             <b>In Burkina Faso</b> as everywhere worldwide, there are many challenges about inclusiveness. Getting "<b>differently abled
                             people</b>" included in the communities is not evident on a daily basis. But it's so important to give them opportunities they deserve even their disabilities. Some organisations
                             are steadily working to get inclusiveness done.
@@ -4214,12 +4215,12 @@ function showSlides(n) {
                 <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank">
                     <div class="k-image2">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; padding: 5px; color: rgb(0, 149, 255);">
+                            style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; padding: 5px; color: rgb(0, 149, 255);">
                             <b> "Inclusive Education" May Be Ordinary Or New To You. But Inclusiveness Is Worded In The Dictionary
                                 And Existed Since Its Creation. It Belongs To Human-Beings To Make Inclusiveness Practical by Accepting And Encouraging Inclusive Education.
                                It's Not A Privilege But A Right For Every Child Including Those Who Are Disabled Or Different.</b> </p>
 
-                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>Inclusive Education</b> has no
+                                <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be a privilege but an intrinsic right.</p>
                     </div>
                 </a>
@@ -4241,9 +4242,9 @@ function showSlides(n) {
 
                 <a href="https://www.icrc.org/en/document/burkina-faso-food-water-and-health-care-are-scarce" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                        <p style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
-                        <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
+                        <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
                     </div>
                 </a>
 
@@ -4265,9 +4266,9 @@ function showSlides(n) {
 
                 <a href="https://www.wfp.org/countries/burkina-faso" target="_blank">
                     <div class="k-imagek4">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                        <p style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Fix Food Insecurity Worldwide?</b> </p>
-                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">While in some regions
+                            <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
                             hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
@@ -4296,12 +4297,12 @@ function showSlides(n) {
 
                         <div class="Clim1">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                            style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Climate Change Is a Big Threat To Earth And Consequently To Human-Beings. It is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes, Volcanos Around The World And Obviously Forcing People Migrations. It Is Undoubtely Clear That Climate Change Has More Endangered Earth Than Never Before. 
                                 But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Increasing Danger [Threat].
                             </b> 
                         <br> 
-                        <b style="font-family: arial; color:#000; font-size: 13.5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
+                        <b style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
                         </b>
                         </p>
                     </div>
@@ -4355,11 +4356,11 @@ function showSlides(n) {
                 <a href="https://www.lafiburkina.org/about/disability-rights-in-burkina-faso/" target="_blank">
                     <div class="k-imagek6">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                            style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Disability Is Not Destiny. But For Some People Living With Disabilities In Exclusive Areas, They
                                 Have To Struggle At Least Two Times Harder Than Anyone To Get Their Needs Or To Achieve.
                                 They are experiencing Toxic And Non-Inclusive Environments Favored By Discriminations In Their Communities.</b> </p>
-                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">As a disabled person, I experienced
+                                <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing lots <b>discriminations</b> everywhere. It's too tough, heartbreaking and challenging but It's also learning . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
@@ -4384,12 +4385,12 @@ function showSlides(n) {
                 <a href="https://en.wikipedia.org/wiki/FESTIMA" target="_blank">
                     <div class="k-imagek7">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                            style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Culture Is A Backbone For Communities To Survive Into A Biggest Family Of Diversity in the Era Of Globalisation. It's A Way Of Promotion 
                                  And Preservation Of A Cultural Identity, A Legacy From Ancestors [Grand-Parents and Parents] To Their Descents
                                 Where Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve Their Culture</b> </p>
-                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks and arts that happening every year in Dedougou, a city located in the western region of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
+                                <p style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks and arts that happening every year in Dedougou, a city located in the western region of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
                             </p>
                     </div>
                 </a>
