--- a/index.html
+++ b/index.html
@@ -1942,11 +1942,11 @@ height: auto;
             width: 80px;
             height: 25px;
             padding: 2px;
-            border: 0.12rem solid rgb(234, 48, 85);
+            border: 0.12rem solid rgba(234, 48, 85, 0.912);
             border-radius: 0.25rem;
             color: #000;
             font-family: arial;
-            margin-top: -0.5rem;
+            margin-top: -1rem;
         }
 
         .Cli:hover{
@@ -3556,11 +3556,11 @@ background: #717171;
             justify-content: center;
             align-items: center;
             text-align: center;
-            width: 100%;
-            padding: 5px;
+            width: auto;
+            padding: 15px;
             height: 45px;
             font-family: 'Kanit';
-            font-size: 18.5px;
+            font-size: 15.5px;
             border-radius: 0.25rem;
             margin-top: -1.5rem;
         }
@@ -3647,9 +3647,10 @@ background: #717171;
             margin-top: 3.5rem;
             margin-bottom: 3.5rem;
             border-radius: 0.5rem;
-            background-color: rgba(254, 254, 254, 0.923);
-            border-top: 0.5rem solid rgba(110, 133, 204, 0.267);
-            border-bottom: 0.5rem solid rgba(110, 133, 204, 0.267);
+            border: 0.12rem solid rgba(110, 133, 204, 0.267);
+            background-color: rgba(253, 253, 253, 0.923);
+            border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
+            border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
         }
 
         .Promo{
@@ -3683,13 +3684,18 @@ background: #717171;
             justify-items: center;
             width: 85%;
             height: 435px;
-            background-color: rgba(249, 249, 249, 0.923);
+            background-color: rgba(253, 253, 253, 0.923);
             padding: 10px;
             border-radius: 0.5rem;
+            border: 0.12rem solid rgba(110, 133, 204, 0.267);
             border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
         }
         
+        .Prom:hover{
+            background: #fff;
+        }
+
         .Pro1{
             font-family: 'Kanit';
             font-size: 20px;
@@ -4299,10 +4305,10 @@ function showSlides(n) {
                         <p
                             style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Climate Change Is a Big Threat To Earth And Consequently To Human-Beings. It is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes, Volcanos Around The World And Obviously Forcing People Migrations. It Is Undoubtely Clear That Climate Change Has More Endangered Earth Than Never Before. 
-                                But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Increasing Danger [Threat].
+                                But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Increasing Danger.
                             </b> 
                         <br> 
-                        <b style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 15.5px; line-height: 22px; padding: 5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
+                        <b style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 13px; line-height: 22px; padding: 5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
                         </b>
                         </p>
                     </div>
