--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
 }
 
         .Photography-content a {
@@ -223,7 +223,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
    }
 
         .Sport-content a {
@@ -299,7 +299,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
   }
 
         .Education-content a {
@@ -375,7 +375,7 @@
   align-items: center;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
         }
 
         .Promoter-content a {
@@ -451,7 +451,7 @@
   align-items: center;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
    }
 
         .Contact-content a {
@@ -528,7 +528,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
    } 
 
         .Community-content a {
@@ -606,7 +606,7 @@
   align-items: center;
   margin-left: 45px;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
    }
 
         .TikiYiki-content a {
@@ -684,7 +684,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
+  border-top: 0.2rem solid orangered;
   }
 
         .Disability-content a {
@@ -1940,7 +1940,7 @@ height: auto;
             justify-items: center;
             background: #f0f0f0;
             width: 80px;
-            height: 25px;
+            height: 30px;
             padding: 2px;
             border: 0.12rem solid rgba(234, 48, 85, 0.912);
             border-radius: 0.25rem;
@@ -1953,6 +1953,7 @@ height: auto;
             background: #000;
             color: yellow;
             transition: 0.18s linear;
+            border: 0.12rem solid #fff;
         }
 
         .content6 {
@@ -3601,10 +3602,11 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background: rgba(245, 245, 245, 0.472);
+            background: rgba(245, 245, 245, 0.433);
             color: #000;
             margin-top: 4rem;
-            box-shadow: 0 1px 0.2rem 1px rgba(134, 190, 242, 0.842);
+            border-radius: 0.5rem;
+            box-shadow: 0 1px 0.2rem 1px rgba(144, 196, 244, 0.842);
         }
 
         .TOPE{
@@ -3661,8 +3663,8 @@ background: #717171;
             font-family: 'Kanit';
             width: 700px;
             height: auto;
-            padding: 7px;
-            border: none;
+            padding: 12px;
+            border-right: 0.12rem solid rgba(110, 133, 204, 0.267);
             font-size: 14.2px;
             color: rgb(44, 78, 164);
             word-spacing: 1px;
@@ -3738,6 +3740,22 @@ background: #717171;
             color: rgb(7, 7, 98);
             text-align: left;
             margin-bottom: 1.5rem;
+}
+
+.Thank{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 2rem;
+    justify-content: center;
+    justify-items: center;
+    width: 100%;
+    height: 300px;
+    font-family: 'Kanit';
+    font-size: 12px;
+    padding-left: 7px;
+    line-height: 17px;
+    margin-top: 1.8rem;
+    
 }
 
 .NAME{
@@ -5645,9 +5663,19 @@ function showSlides(n) {
             <div class="Prom">
 
                 <div class="Thankiou"> 
-                    <div> 
-                    <b> THANKSGiViNGS * REMERCiEMENTS </b>
+
+                    <div class="Thank"> 
+
+                    <div style="padding: 3px; border-bottom: 0.12rem solid #111111;">
+                    <b style="font-size: 14px;"> THANKSGiViNGS </b>
+                <p style="font-family: 'Kanit';">I am giving lots thanks to those people who believed to my projects and ceaselessly supported them</p>
                     </div>
+
+                    <div>
+                        <b style="font-size: 14px;">REMERCiEMENTS </b>
+                        <p style="font-family: 'Kanit';">Je remercie beaucoup tous ces gens qui ont cru à mes projets et les ont soutenus sans cesse</p>
+                        </div>
+                </div>
                 
                     <div class="NAME"> 
 
