--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
             padding-top: 20px;
             padding-bottom: 20px;
             margin-top: 3.5%;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .Home-Photo {
@@ -1581,7 +1581,7 @@
             padding-top: 5px;
             border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content1 a:hover {
@@ -1652,7 +1652,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content2 a:hover {
@@ -1724,7 +1724,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content3 a:hover {
@@ -1794,7 +1794,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content4 a:hover {
@@ -1864,7 +1864,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content5 a:hover {
@@ -1976,7 +1976,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content6 a:hover {
@@ -2046,7 +2046,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content7 a:hover {
@@ -2113,7 +2113,7 @@ height: auto;
             word-spacing: 1.7px;
             border-bottom: 0.2px solid #9d9d9d7c;
             padding: 10px;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .contentx a:hover {
@@ -2209,7 +2209,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content8:hover{    
@@ -2276,7 +2276,7 @@ height: auto;
             justify-content: center;
             justify-items: center;
             background: rgba(232, 231, 231, 0.458);
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
 .DACA{
@@ -2626,7 +2626,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .content9a img {
@@ -2673,7 +2673,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 15px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .BURKINAFASO{
@@ -2689,7 +2689,7 @@ height: auto;
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
-            box-shadow: 0 0 0.5rem 0.5px rgb(108, 161, 246);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
 
         }
 .Bmap{
@@ -2890,7 +2890,7 @@ cursor: pointer;
             background-color: #fafafa;
             text-align: left;
             padding: 5px;
-            box-shadow: 0 0.4px 0.3rem 0.5px rgb(8, 104, 230);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
             border-radius: 0.2rem;
             font-family: 'Kanit'; 
             line-height: 17px; 
@@ -2931,7 +2931,7 @@ cursor: pointer;
             height: 410px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .C {
@@ -3389,7 +3389,7 @@ cursor: pointer;
             font-family: 'Kanit';
             padding-top: 5px;
             padding-bottom: 5px;
-            box-shadow: 0 0 0.3rem 1px #000;
+            box-shadow: 0 0 0.3rem 1px #2c2c2c;
         }
 
         .T{
@@ -3606,7 +3606,7 @@ background: #717171;
             color: #000;
             margin-top: 4rem;
             border-radius: 0.5rem;
-            box-shadow: 0 1px 0.2rem 1px rgba(144, 196, 244, 0.842);
+            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .TOPE{
