--- a/index.html
+++ b/index.html
@@ -4131,7 +4131,7 @@ function showSlides(n) {
             <a href="https://www.merriam-webster.com/dictionary/differently%20abled" target="_blank">
                
                 <div class="disabled">
-                <b> * DON'T SEE ONLY MY DISABILITY | SEE ALSO MY ABILITY | WE ARE DIFFERENTLY ABLED *</b>
+                <b> * DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY * WE ARE DIFFERENTLY ABLED *</b>
                 </div>
             </a>
 
