--- a/index.html
+++ b/index.html
@@ -2237,7 +2237,7 @@ height: auto;
         .envelop-tittle {
             display: flex;
             flex-direction: column;
-            justify-content: left;
+            justify-content: center;
             align-items: center;
             width: 274px;
             height: 38px;
