--- a/index.html
+++ b/index.html
@@ -1307,9 +1307,11 @@
             align-items: center;
             text-align: left;
             background-color: #fdfdfde5;
+            border-top-right-radius: 0.5rem;
+            border-top-left-radius: 0.5rem;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 3.5%;
+            margin-top: 4%;
             box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
         }
 
