--- a/index.html
+++ b/index.html
@@ -3688,6 +3688,7 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             background-color: rgba(253, 253, 253, 0.923);
+            border: 0.12rem solid rgba(110, 133, 204, 0.267);
             border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
             margin-bottom: 3.5rem;
