--- a/index.html
+++ b/index.html
@@ -3653,8 +3653,7 @@ background: #717171;
             border-radius: 0.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             background-color: rgba(254, 254, 254, 0.961);
-            border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
-            border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
+            border-top: 0.25rem solid rgba(110, 133, 204, 0.365);
         }
 
         .Promo{
@@ -3683,13 +3682,11 @@ background: #717171;
             display: grid;
             grid-template-rows: 1fr 1fr;
             width: 84%;
-            height: 750px;
+            height: 730px;
             justify-content: center;
             justify-items: center;
-            background-color: rgba(255, 255, 255, 0.923);
+            background-color: rgba(255, 255, 255, 0.925);
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
-            border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
-            border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
             margin-bottom: 3.5rem;
             border-radius: 0.5rem;
         }
@@ -3714,14 +3711,14 @@ background: #717171;
           grid-template-columns: 1fr 1fr;
           justify-content: center;
           justify-items: center;
-          column-gap: 0.5rem;
+          column-gap: 0.65rem;
           width: 100%;
-          height: 650px;
+          height: 645px;
           background: transparent;
           font-family: 'Kanit';
           color:rgb(42, 116, 181);
           padding: 12px;
-          margin-top: 0.3rem;
+          margin-top: -0.5rem;
         }
 
         .SurvA{
@@ -3740,14 +3737,14 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(40, 40, 40, 0.086);
+            background: rgba(50, 50, 50, 0.063);
             font-family: 'Kanit';
-            font-size: 13px;
-            color:rgb(55, 55, 192);
-            border: 0.12px solid rgba(22, 78, 106, 0.314);
+            font-size: 13.25px;
+            color:rgb(64, 69, 168);
+            border: 0.12rem solid rgba(110, 133, 204, 0.267);
         }
           .S:hover{
-            background: #161616c2;
+            background: #111111d3;
             color: #fff;
             transition: 0.2s linear;
           }
@@ -3764,7 +3761,6 @@ background: #717171;
             padding: 10px;
             border-radius: 0.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
-            border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
         }
         
@@ -3813,7 +3809,7 @@ background: #717171;
             font-size: 16px;
             color: rgb(7, 7, 98);
             text-align: left;
-            margin-bottom: 1.5rem;
+            margin-bottom: 0.5rem;
 }
 
 .Thank{
@@ -5725,7 +5721,7 @@ function showSlides(n) {
                         <div>
                         <img src="https://www.zupimages.net/up/23/28/kkoy.jpg" alt="At office">
                     <figure>
-                        <figcaption style="margin-top: 0.5rem; font-family: 'Merienda'; font-size: 16px; color: grey; text-align: center;">
+                        <figcaption style="margin-top: 0.5rem; font-family: 'Kanit'; font-size: 15px; color: grey; text-align: center;">
                             Disability is not Destiny
                             </figcaption>
                         </figure>
