--- a/index.html
+++ b/index.html
@@ -2614,7 +2614,7 @@ height: auto;
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: rgba(231, 233, 234, 0.393);
+            background-color: rgba(238, 239, 239, 0.393);
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2656,7 +2656,7 @@ height: auto;
             box-shadow: 0px -1px 0.4rem 0.5px rgba(200, 200, 200, 0.675);
             transition: 0.25s linear;
             padding: 5px;
-            background-color: #f8f8f8;
+            background-color: #fafafa;
         }
 
         .contenty {
