--- a/index.html
+++ b/index.html
@@ -3391,7 +3391,7 @@ cursor: pointer;
             font-family: 'Kanit';
             padding-top: 5px;
             padding-bottom: 5px;
-            box-shadow: 0 0 0.3rem 1px #2c2c2c;
+            border: 0.65rem solid #ededed;
         }
 
         .T{
