--- a/index.html
+++ b/index.html
@@ -3573,12 +3573,12 @@ background: #717171;
         }
 
         .disabled{
-            background: #fdfdfd;
+            background: transparent;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color:#18a5d8fa;
+            color:#1383acfa;
             font-size: 22px;
             font-family: 'Kanit';
             width: 100%;
@@ -3604,11 +3604,11 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background: rgba(247, 247, 247, 0.433);
+            background: rgba(251, 250, 250, 0.433);
             color: #000;
             margin-top: 4rem;
             border-radius: 0.5rem;
-            box-shadow: 0 1px 0.2rem 1px rgba(152, 202, 249, 0.842);
+            box-shadow: 0 1px 0.15rem 1px rgba(152, 202, 249, 0.842);
         }
 
         .TOPE{
@@ -3650,7 +3650,6 @@ background: #717171;
             padding: 5px;
             margin-top: 3.5rem;
             margin-bottom: 3.5rem;
-            border-radius: 0.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             background-color: rgba(254, 254, 254, 0.961);
             border-top: 0.25rem solid rgba(110, 133, 204, 0.365);
@@ -3688,7 +3687,6 @@ background: #717171;
             background-color: rgba(255, 255, 255, 0.925);
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             margin-bottom: 3.5rem;
-            border-radius: 0.5rem;
         }
 
         .Surv1{
@@ -3737,11 +3735,12 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(50, 50, 50, 0.054);
+            background: rgba(49, 49, 49, 0.066);
+            line-height: 19px;
             font-family: 'Kanit';
             font-size: 13.25px;
-            color:rgb(56, 61, 171);
-            border: 0.12rem solid rgba(110, 133, 204, 0.267);
+            color:rgb(36, 71, 167);
+            border: 0.12rem solid rgba(76, 90, 130, 0.267);
         }
           .S:hover{
             background: #111111d3;
@@ -3755,11 +3754,10 @@ background: #717171;
             justify-content: center;
             row-gap: 0.5rem;
             justify-items: center;
-            width: 85%;
-            height: 435px;
+            width: 84%;
+            height: 420px;
             background-color: rgba(253, 253, 253, 0.923);
             padding: 10px;
-            border-radius: 0.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
         }
@@ -3802,20 +3800,19 @@ background: #717171;
             justify-items: center;
             width: auto;
             column-gap: 0.15rem;
-            height: 430px;
-            padding: 10px;
+            height: 330px;
+            padding-top: 29px;
             background: transparent;
             font-family: 'Kanit';
             font-size: 16px;
             color: rgb(7, 7, 98);
             text-align: left;
-            margin-bottom: 0.5rem;
 }
 
 .Thank{
     display: grid;
     grid-template-rows: 1fr 1fr;
-    row-gap: 2rem;
+    row-gap: 1rem;
     justify-content: center;
     justify-items: center;
     width: 100%;
@@ -3824,7 +3821,7 @@ background: #717171;
     font-size: 12px;
     padding-left: 7px;
     line-height: 17px;
-    margin-top: 1.8rem;
+    margin-top: 1.3rem;
     
 }
 
@@ -3834,8 +3831,7 @@ background: #717171;
     justify-content: space-between;
     justify-items: center;
     width: auto;
-    height: 270px;
-    padding: 10px;
+    height: auto;
     color: rgb(9, 23, 148);
 }
 
@@ -3845,15 +3841,14 @@ background: #717171;
     justify-content: space-between;
     justify-items: center;
     column-gap: 0.1rem;
-    font-size: 14px;
-    line-height: 22px;
+    font-size: 13.5px;
+    line-height: 21.5px;
     font-family: 'Kanit';
-    height: auto;
+    height: 340px;
     width: auto;
-    padding: 10px;
     border: 0.11rem solid #d0d0d0ef;
     border-radius: 0.5rem;
-    background: rgba(178, 213, 248, 0.547);
+    background: rgba(190, 220, 250, 0.547);
 }
 
 .button{
