--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(246, 246, 246, 0.882);
+            background-color: rgba(233, 233, 233, 0.407);
             justify-content: center;
             align-items: center;
         }
@@ -2347,7 +2347,7 @@ height: auto;
             }
 
         .NADA{
-            background: #fafafa;
+            background: #fcfcfc;
             display: grid;
             grid-template-columns: 60px 95px;
             width: 200px;
@@ -3651,7 +3651,7 @@ background: #717171;
             margin-top: 3.5rem;
             margin-bottom: 3.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
-            background-color: rgba(254, 254, 254, 0.961);
+            background-color: rgba(255, 255, 255, 0.925);
             border-top: 0.25rem solid rgba(110, 133, 204, 0.365);
         }
 
@@ -3740,11 +3740,11 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(49, 49, 49, 0.066);
+            background: rgba(45, 45, 45, 0.103);
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13.25px;
-            color:rgb(36, 71, 167);
+            color:rgb(36, 69, 161);
             border: 0.12rem solid rgba(76, 90, 130, 0.267);
         }
           .S:hover{
@@ -3761,7 +3761,7 @@ background: #717171;
             justify-items: center;
             width: 84%;
             height: 420px;
-            background-color: rgba(253, 253, 253, 0.923);
+            background-color: rgba(255, 255, 255, 0.925);
             padding: 10px;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
@@ -3849,13 +3849,12 @@ background: #717171;
     font-family: 'Kanit';
     height: 340px;
     width: auto;
-    border-radius: 0.5rem;
-    background: rgba(57, 65, 78, 0.941);
-    color: #ffffffe1;
+    background: rgba(48, 55, 66, 0.97);
+    color: #ffffffde;
 }
 
 .NAM:hover{
-    background: rgba(49, 57, 68, 0.97);
+    background: rgba(44, 51, 61, 0.999);
     color: #ffffffea;
 }
 
