--- a/index.html
+++ b/index.html
@@ -3552,8 +3552,8 @@ background: #717171;
             background: #fff;
             border: 0.1px solid rgba(139, 139, 139, 0.486);
             border-bottom: none;
-            color: rgba(9, 106, 197, 0.949);
-            box-shadow: 0 1px 0.2rem 0.1px rgba(22, 104, 180, 0.931);
+            color: rgba(31, 107, 178, 0.949);
+            box-shadow: 0 2px 0.1rem 0.1px rgba(25, 117, 202, 0.669);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3604,11 +3604,11 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background: rgba(251, 250, 250, 0.433);
+            background: rgba(255, 255, 255, 0.688);
             color: #000;
             margin-top: 4rem;
             border-radius: 0.5rem;
-            box-shadow: 0 1px 0.15rem 1px rgba(152, 202, 249, 0.842);
+            box-shadow: 0 -0.5px 0.2rem 0 rgba(164, 208, 250, 0.842);
         }
 
         .TOPE{
