--- a/index.html
+++ b/index.html
@@ -2719,6 +2719,61 @@ height: auto;
     box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
     transition: 0.14s linear;
 }
+
+.Burki-PiK{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 1.5rem;
+    justify-content: center;
+    justify-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    border: 0.13rem solid rgba(119, 136, 153, 0.094);
+    background: rgba(233, 237, 243, 0.591);
+   
+
+}
+
+.Burki-pics{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    column-gap: 1.57rem;
+    padding: 10px;
+    color: rgb(72, 72, 181);
+    font-family: 'Kanit';
+    font-size: 13px;
+    background: #fffffff0;
+    border-radius: 0.25rem;
+    border: 0.11rem solid rgba(208, 217, 225, 0.97);
+    justify-content: center;
+    justify-items: center;
+    text-align: left;
+    width: 87%;
+    height: 350px;
+    line-height: 20px;
+}
+
+.Bu-pics1{
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 0;
+    border-radius: 0.2rem;
+    justify-content: center;
+    justify-items: center;
+    border: 0.12rem solid rgba(98, 201, 248, 0.537);
+    width: 100%;
+    height: 320px;
+    padding: 10px;
+    font-family: 'Kanit';
+    background: #fafafafa;
+}
+.Bu-pics img{
+    width: 400px;
+    height: 245px;
+}
+
         .FASOTITLE{
             display: grid;
             grid-template-columns: 1fr;
@@ -2727,12 +2782,17 @@ height: auto;
             width: 800px;
             height: 174px;
             padding: 8px;
-            background: #fcfcfcf5;
+            background: #fffffff5;
             border-radius: 0.35rem;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
             color:rgba(126, 126, 126, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 14px;
+        }
+
+        .Burki-pics:hover{
+            background: #fafafaf5;
+            transition: 0.2s linear;
         }
 
         .FASOTITLE:hover{
@@ -3740,12 +3800,12 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(72, 72, 72, 0.114);
+            background: rgba(143, 143, 143, 0.16);
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13.13px;
-            color:rgb(51, 101, 186);
-            border: 0.12rem solid rgba(47, 56, 80, 0.267);
+            color:rgb(62, 106, 182);
+            border: 0.12rem solid rgba(55, 91, 192, 0.447)
         }
           .S:hover{
             background: #111111d3;
@@ -4808,6 +4868,109 @@ function showSlides(n) {
 
 </div>
 
+<div class="Burki-PiK">
+    <div class="Burki-pics">
+        <div class="Bu-pics">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Tiebele_village_in_Burkina_Faso_04.jpg/2560px-Tiebele_village_in_Burkina_Faso_04.jpg">
+    <figure>
+        <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000; line-height: 13px;">
+Human-Being Talent And Ability To Connect His Art to Mother Nature Is Uncredible. Through A Channel Of Imagination And Creation His Ability To reflect His Imagination Into Artworks Is One Of His Most Wonderful And Successful Emergences Up Into History. Paintings Made By Women Are Featured On Many The Tiebele HouseHolds Walls (BURKINA FASO)
+        </br>
+ /© WikipediaSources/Tiebele/
+        </figcaption>
+        </figure>
+        </div>
+    <div class="Bu-pics1">
+    <b style="font-size: 22px"> [1.] Disability And Local Mentality</b> 
+    <p style="font-family: 'Kanit'; font-size: 12.44px; line-height: 17.75px; color: darkblue">
+    <br>
+        Talk About How Disability <span id="dots"></span>...<span id="more">Is Perceived in African Mentalities.
+    
+        In general but especially Countries Like In Burkina Faso, Niger or in Mali. 
+        <br>
+ It's Obvious that even an existence of a little difference of development, matters and issues tied to disability in terms of how people are living well with disabilities or not; what are they are feelings about their rights, to be empowered or not ? For sur the main focus here is to digging deep into many subjects and concerns of disabled people no matter who they are, gettin knowledges to to understand why the continual specter and ceaseless discriminations towards people with difference and also what matters is the possibilities of getting more people have substancial approaches of disability with disabled people in their communites. 
+ <br>
+ Using resources, methology and analyses in order to bring to light and me allow a larger understanding of what is Disability, to many people. Sories and ideas and narratives displayed below belong totally to people who are disabled or parents of disabled people are agreeing to contribute by their teeling stories so that they can leave silent moment because the discriminations.
+</span>
+</p>
+<button class="button" onclick="myFunction()" id="myBtn">Read more</button>
+                    
+<script>
+
+function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } 
+  
+  else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+</div>
+
+</div>
+
+    <div class="Burki-pics">
+
+        <div class="Bu-pics">
+            Image Here
+        </div>
+    <div class="Bu-pics1">
+Text Here [ 2.] Talk About the policies and gobernmental achievements and set rules about Disability, Their Rights, Their Duties And In General Their Lives As Different But Also As Citizens. They Have An Impact whetever Its Nature In The Communities Because Their Seventh Sens Will Get Them Emerge Even From A Little Chaos. And The Local interaction and perception given it is about disability or disabled persons. 
+</div>
+
+  </div>
+    <div class="Burki-pics">
+
+            <div class="Bu-pics">
+                Image Here
+            </div>
+        <div class="Bu-pics1">
+    Text Here [  3 Take An Approch that consist to first define what is disability and corollary issues and matters. Dig Into A wider Way including Disability and gender in the society ? Disability and Culture and many other Aspect Of Any Cultural identity.
+    ]
+    </div>
+
+     </div>
+
+    <div class="Burki-pics">
+        <div class="Bu-pics">
+            Image Here
+        </div>
+    <div class="Bu-pics1">
+        Text Here [4.] Explore what is the best option to tacke barriers in some societies through their perception to disabled people around them.
+</div>
+</div>
+
+    <div class="Burki-pics">
+        <div class="Bu-pics">
+            Image Here
+        </div>
+    <div class="Bu-pics1">
+        Text Here [5.] Coordinate A Coalition of disabled people and relatives to start a chapter of writing their own stories and histories.
+   
+    </div>
+
+       </div>
+    <div class="Burki-pics">
+
+        <div class="Bu-pics">
+        Image Here
+    </div>
+<div class="Bu-pics1">
+    6 Being An organisation that has tied cooperation with other similar organisations and then becoming an active member to try to gain more results about their fight for rights.
+  
+</div>
+</div>
+</div>
             <div class="contenty">
 
                 <a href="https://www.ontb.bf/" target="_blank">
