--- a/index.html
+++ b/index.html
@@ -2730,8 +2730,7 @@ height: auto;
     width: 100%;
     height: 100%;
     padding: 20px;
-    border: 0.13rem solid rgba(119, 136, 153, 0.094);
-    background: rgba(233, 237, 243, 0.591);
+     background: rgba(255, 255, 255, 0.691);
    
 
 }
@@ -2741,37 +2740,35 @@ height: auto;
     grid-template-columns: 0.5fr 1fr;
     column-gap: 1.57rem;
     padding: 10px;
-    color: rgb(72, 72, 181);
+    color: rgb(71, 71, 153);
     font-family: 'Kanit';
     font-size: 13px;
-    background: #fffffff0;
-    border-radius: 0.25rem;
-    border: 0.11rem solid rgba(208, 217, 225, 0.97);
+    background: rgba(246, 246, 246, 0.767);
+    border: 0.11rem solid rgba(45, 111, 187, 0.189);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 87%;
     height: 350px;
-    line-height: 20px;
+    line-height: 17.6px;
 }
 
 .Bu-pics1{
     display: grid;
     grid-template-columns: 1fr;
-    column-gap: 0;
-    border-radius: 0.2rem;
     justify-content: center;
     justify-items: center;
-    border: 0.12rem solid rgba(98, 201, 248, 0.537);
+    border-left: 0.11rem solid rgba(94, 177, 216, 0.237);
     width: 100%;
     height: 320px;
     padding: 10px;
     font-family: 'Kanit';
-    background: #fafafafa;
+    background: rgba(255, 255, 255, 0.966);
 }
 .Bu-pics img{
     width: 400px;
     height: 245px;
+    background: #fff;
 }
 
         .FASOTITLE{
@@ -2791,7 +2788,7 @@ height: auto;
         }
 
         .Burki-pics:hover{
-            background: #fafafaf5;
+            background: rgba(242, 189, 189, 0.244);
             transition: 0.2s linear;
         }
 
@@ -4873,24 +4870,23 @@ function showSlides(n) {
         <div class="Bu-pics">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Tiebele_village_in_Burkina_Faso_04.jpg/2560px-Tiebele_village_in_Burkina_Faso_04.jpg">
     <figure>
-        <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000; line-height: 13px;">
-Human-Being Talent And Ability To Connect His Art to Mother Nature Is Uncredible. Through A Channel Of Imagination And Creation His Ability To reflect His Imagination Into Artworks Is One Of His Most Wonderful And Successful Emergences Up Into History. Paintings Made By Women Are Featured On Many The Tiebele HouseHolds Walls (BURKINA FASO)
+        <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000; line-height: 12.5px;">
+Human-Being Talent And Ability To Connect His Art to Mother Nature Is Uncredible. Through A Channel Of Imagination And Creation His Ability To reflect His Imagination Into Artworks Is One Of His Most Wonderful And Successful Emergences Up Into History. Paintings Made By Women Are Featured On Many Walls in Tiebele (BURKINA FASO)
         </br>
  /© WikipediaSources/Tiebele/
         </figcaption>
         </figure>
         </div>
     <div class="Bu-pics1">
-    <b style="font-size: 22px"> [1.] Disability And Local Mentality</b> 
-    <p style="font-family: 'Kanit'; font-size: 12.44px; line-height: 17.75px; color: darkblue">
+    <b style="font-size: 19px"> 1. Disabilities And Local Mentalities In Burkina Faso</b> 
+    <p style="font-family: 'Kanit'; font-size: 12.4px; line-height: 17px; color: darkblue">
     <br>
-        Talk About How Disability <span id="dots"></span>...<span id="more">Is Perceived in African Mentalities.
-    
-        In general but especially Countries Like In Burkina Faso, Niger or in Mali. 
+        How Disability Is Perceived in African Countries And Mentalities In general but especially in Countries Like Burkina Faso, Niger or Mali all of them located in The Sahelian Region and where violent terrorism is barbarically murdering lots innocent people.
         <br>
- It's Obvious that even an existence of a little difference of development, matters and issues tied to disability in terms of how people are living well with disabilities or not; what are they are feelings about their rights, to be empowered or not ? For sur the main focus here is to digging deep into many subjects and concerns of disabled people no matter who they are, gettin knowledges to to understand why the continual specter and ceaseless discriminations towards people with difference and also what matters is the possibilities of getting more people have substancial approaches of disability with disabled people in their communites. 
+       
+ It's Obvious that even an existence of a little difference of development between the <span id="dots"></span><span id="more"> three regions, matters and issues tied to disability seem to be the same in terms of how people are living well with disabilities or not; what are their feelings about their rights? Basically, the main focus here is to dig deep into many subjects and concerns of disabled people no matter who they are, getting tools in trying to understand why there is a continual specter and ceaseless discriminations towards people with difference. Also what matters is the possibility of getting more people have substancial approaches and ideas of what is disability and how disabled people deal with that in their communites on a daily basis. 
  <br>
- Using resources, methology and analyses in order to bring to light and me allow a larger understanding of what is Disability, to many people. Sories and ideas and narratives displayed below belong totally to people who are disabled or parents of disabled people are agreeing to contribute by their teeling stories so that they can leave silent moment because the discriminations.
+ Using resources, methology and analyses and narratives in order to bring to light and then allow a larger understanding of what is Disability by a wide ranger of people. Stories, ideas and narratives displayed below belong totally to people who are disabled or parents of disabled people and are agreeing to contribute by telling their stories.
 </span>
 </p>
 <button class="button" onclick="myFunction()" id="myBtn">Read more</button>
