--- a/index.html
+++ b/index.html
@@ -2730,7 +2730,7 @@ height: auto;
     width: 100%;
     height: 100%;
     padding: 20px;
-     background: rgba(255, 255, 255, 0.691);
+     background: rgba(255, 255, 255, 0.739);
    
 
 }
@@ -2740,7 +2740,7 @@ height: auto;
     grid-template-columns: 0.5fr 1fr;
     column-gap: 1.57rem;
     padding: 10px;
-    color: rgb(71, 71, 153);
+    color: rgb(67, 67, 176);
     font-family: 'Kanit';
     font-size: 13px;
     background: rgba(246, 246, 246, 0.767);
@@ -4868,17 +4868,17 @@ function showSlides(n) {
 <div class="Burki-PiK">
     <div class="Burki-pics">
         <div class="Bu-pics">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Tiebele_village_in_Burkina_Faso_04.jpg/2560px-Tiebele_village_in_Burkina_Faso_04.jpg">
+        <img src="https://www.hi-us.org/sn_uploads/federation/country/BURKINAFASO_1.jpg?maxw=1110&maxh=1110">
     <figure>
         <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000; line-height: 12.5px;">
-Human-Being Talent And Ability To Connect His Art to Mother Nature Is Uncredible. Through A Channel Of Imagination And Creation His Ability To reflect His Imagination Into Artworks Is One Of His Most Wonderful And Successful Emergences Up Into History. Paintings Made By Women Are Featured On Many Walls in Tiebele (BURKINA FASO)
+A programme of inclusive education allows a disabled student to benefit to a tricycle to go school (BURKINA FASO)
         </br>
- /© WikipediaSources/Tiebele/
+ © Olivier Czar Katona / HI for Umanity an Inclusion/Burkina Faso
         </figcaption>
         </figure>
         </div>
     <div class="Bu-pics1">
-    <b style="font-size: 19px"> 1. Disabilities And Local Mentalities In Burkina Faso</b> 
+    <b style="font-size: 18px"> 1. Disabilities And Local Mentalities In Burkina Faso</b> 
     <p style="font-family: 'Kanit'; font-size: 12.4px; line-height: 17px; color: darkblue">
     <br>
         How Disability Is Perceived in African Countries And Mentalities In general but especially in Countries Like Burkina Faso, Niger or Mali all of them located in The Sahelian Region and where violent terrorism is barbarically murdering lots innocent people.
