--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(236, 236, 236, 0.698);
+            background-color: rgba(248, 248, 248, 0.906);
             justify-content: center;
             align-items: center;
         }
@@ -2730,7 +2730,9 @@ height: auto;
     width: 100%;
     height: 100%;
     padding: 20px;
-     background: rgba(255, 255, 255, 0.739);
+    background: rgba(229, 229, 229, 0.594);
+    border-top: 0.13rem solid rgba(136, 222, 240, 0.905);
+     border-bottom: 0.13rem solid rgba(136, 222, 240, 0.905);
    
 
 }
@@ -2743,7 +2745,7 @@ height: auto;
     color: rgb(67, 67, 176);
     font-family: 'Kanit';
     font-size: 13px;
-    background: rgba(246, 246, 246, 0.767);
+    background: rgba(255, 255, 255, 0.973);
     border: 0.11rem solid rgba(45, 111, 187, 0.189);
     justify-content: center;
     justify-items: center;
@@ -2763,12 +2765,12 @@ height: auto;
     height: 320px;
     padding: 10px;
     font-family: 'Kanit';
-    background: rgba(255, 255, 255, 0.966);
+    background: transparent;
 }
 .Bu-pics img{
     width: 400px;
     height: 245px;
-    background: #fff;
+    background: transparent;
 }
 
         .FASOTITLE{
