--- a/index.html
+++ b/index.html
@@ -2724,15 +2724,17 @@ height: auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    grid-gap: 1.5rem;
-    justify-content: center;
+   grid-gap: 2rem;
+    justify-content: space-between;
     justify-items: center;
     width: 100%;
-    height: 100%;
-    padding: 20px;
-    background: rgba(229, 229, 229, 0.594);
-    border-top: 0.13rem solid rgba(136, 222, 240, 0.905);
-     border-bottom: 0.13rem solid rgba(136, 222, 240, 0.905);
+    height: auto;
+    padding: 10px;
+    background: rgba(227, 227, 227, 0.537);
+    border-top: 0.13rem solid rgba(136, 226, 245, 0.905);
+    border-bottom: 0.13rem solid rgba(136, 226, 245, 0.905);
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
    
 
 }
@@ -2740,19 +2742,19 @@ height: auto;
 .Burki-pics{
     display: grid;
     grid-template-columns: 0.5fr 1fr;
-    column-gap: 1.57rem;
+    column-gap: 0.25rem;
     padding: 10px;
     color: rgb(67, 67, 176);
     font-family: 'Kanit';
-    font-size: 13px;
-    background: rgba(255, 255, 255, 0.973);
-    border: 0.11rem solid rgba(45, 111, 187, 0.189);
+    background: rgba(255, 255, 255, 0.98);
+    border: 0.12rem solid rgba(62, 160, 235, 0.778);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 87%;
-    height: 350px;
-    line-height: 17.6px;
+    height: 370px;
+    line-height: 17px;
+     font-size: 13px;
 }
 
 .Bu-pics1{
@@ -2760,17 +2762,20 @@ height: auto;
     grid-template-columns: 1fr;
     justify-content: center;
     justify-items: center;
-    border-left: 0.11rem solid rgba(94, 177, 216, 0.237);
+    border-left: 0.11rem solid rgba(103, 195, 238, 0.399);
     width: 100%;
     height: 320px;
-    padding: 10px;
+    padding: 20px;
     font-family: 'Kanit';
-    background: transparent;
+    background: #fff;
+    padding: 10px;
+    border-radius: 0.5rem;
 }
 .Bu-pics img{
     width: 400px;
-    height: 245px;
+    height: 255px;
     background: transparent;
+    padding: 3px;
 }
 
         .FASOTITLE{
@@ -4868,11 +4873,11 @@ function showSlides(n) {
 </div>
 
 <div class="Burki-PiK">
-    <div class="Burki-pics">
+    <div class="Burki-pics" style="margin-top: 1.5rem">
         <div class="Bu-pics">
         <img src="https://www.hi-us.org/sn_uploads/federation/country/BURKINAFASO_1.jpg?maxw=1110&maxh=1110">
     <figure>
-        <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000; line-height: 12.5px;">
+        <figcaption style="font-family: 'verdana'; font-size: 10px; color: #000;">
 A programme of inclusive education allows a disabled student to benefit to a tricycle to go school (BURKINA FASO)
         </br>
  © Olivier Czar Katona / HI for Umanity an Inclusion/Burkina Faso
