--- a/index.html
+++ b/index.html
@@ -2730,7 +2730,7 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(227, 227, 227, 0.537);
+    background: rgba(227, 227, 227, 0.551);
     border-top: 0.13rem solid rgba(136, 226, 245, 0.905);
     border-bottom: 0.13rem solid rgba(136, 226, 245, 0.905);
     margin-top: 1.5rem;
@@ -2744,16 +2744,16 @@ height: auto;
     grid-template-columns: 0.5fr 1fr;
     column-gap: 0.25rem;
     padding: 10px;
-    color: rgb(67, 67, 176);
+    color: rgba(132, 132, 133, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.964);
-    border: 0.12rem solid rgba(69, 169, 245, 0.69);
+    border: 0.12rem solid rgba(125, 187, 216, 0.954);
     justify-content: center;
     justify-items: center;
     text-align: left;
-    width: 87%;
+    width: 86%;
     height: 370px;
-    line-height: 17.5px;
+    line-height: 17px;
      font-size: 14px;
 }
 
@@ -2768,6 +2768,7 @@ height: auto;
     padding: 15px;
     font-family: 'Kanit';
     background: #fff;
+    color: rgba(82, 82, 82, 0.697);
 }
 .Bu-pics img{
     width: 400px;
@@ -2793,7 +2794,7 @@ height: auto;
         }
 
         .Burki-pics:hover{
-            background: rgba(223, 225, 226, 0.257);
+            background: rgba(225, 235, 239, 0.509);
             transition: 0.2s linear;
         }
 
@@ -4884,7 +4885,7 @@ A programme of inclusive education allows a disabled student to benefit to a tri
         </div>
     <div class="Bu-pics1">
     <b style="font-size: 18px"> 1. Disabilities And Local Mentalities In Burkina Faso</b> 
-    <p style="font-family: 'Kanit'; font-size: 12.68px; line-height: 16.3px; color: darkblue">
+    <p style="font-family: 'Kanit'; font-size: 12.8px; line-height: 17px; color: #000;">
     <br>
         How Disability Is Perceived in African Countries And Mentalities In general but especially in Countries Like Burkina Faso, Niger or Mali all of them located in The Sahelian Region and where violent terrorism is barbarically murdering lots innocent people.
         <br>
