--- a/index.html
+++ b/index.html
@@ -2730,7 +2730,7 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(231, 230, 230, 0.601);
+    background: rgba(224, 223, 223, 0.556);
     border-top: 0.13rem solid rgba(123, 226, 247, 0.836);
     border-bottom: 0.13rem solid rgba(123, 226, 247, 0.836);
     margin-top: 1.5rem;
@@ -2753,8 +2753,7 @@ height: auto;
     text-align: left;
     width: 86%;
     height: 370px;
-    line-height: 16px;
-     font-size: 13.7px;
+
 }
 
 .Bu-pics1{
@@ -2764,11 +2763,13 @@ height: auto;
     justify-items: center;
     border: 0.12rem solid rgba(99, 195, 240, 0.514);
     width: 100%;
-    height: 310px;
+    height: 350px;
     padding: 15px;
     font-family: 'Kanit';
+    line-height: 17.5px;
+    font-size: 13.4px;
     background: #fff;
-    color: rgba(82, 82, 82, 0.697);
+    color: rgba(79, 79, 79, 0.697);
 }
 .Bu-pics img{
     width: 400px;
@@ -3929,13 +3930,13 @@ background: #717171;
 
 .button{
     background: rgb(224, 224, 224);
-    width: 111px;
-    height: 43px;
-    border-radius: 0.25rem;
+    width: 97px;
+    height: 38px;
+    border-radius: 0.2rem;
     font-size: 14px;
     color: rgb(88, 88, 88);
     cursor: pointer;
-    margin-bottom: 1rem;
+    margin-bottom: 1.7rem;
 }
 
 .button:hover{
@@ -4885,12 +4886,12 @@ A programme of inclusive education allows a disabled student to benefit to a tri
         </div>
     <div class="Bu-pics1">
     <b style="font-size: 18px"> 1. Disabilities And Local Mentalities In Burkina Faso</b> 
-    <p style="font-family: 'Kanit'; font-size: 12.8px; line-height: 17px; color: #000;">
+    <p>
     <br>
-        How Disability Is Perceived in African Countries And Mentalities In general but especially in Countries Like Burkina Faso, Niger or Mali all of them located in The Sahelian Region and where violent terrorism is barbarically murdering lots innocent people.
+        How Disability is perceived in African countries and mentalities in general but especially in countries like Burkina Faso, Niger or Mali all of them located in the Sahelian region and where violent terrorism is barbarically murdering lots innocent people.
         <br>
        
- It's Obvious that even an existence of a little difference of development between the <span id="dots"></span><span id="more"> three regions, matters and issues tied to disability seem to be the same in terms of how people are living well with disabilities or not; what are their feelings about their rights? Basically, the main focus here is to dig deep into many subjects and concerns of disabled people no matter who they are, getting tools in trying to understand why there is a continual specter and ceaseless discriminations towards people with difference. Also what matters is the possibility of getting more people have substancial approaches and ideas of what is disability and how disabled people deal with that in their communites on a daily basis. 
+ It's Obvious that even an existence of a little difference of development between the <span id="dots"></span><span id="more"> three countries, matters and issues tied to disabled people that seem to be the same every where in terms of how people are living better or no with disabilities; what are their feelings about their rights? Basically, the main focus here is to dig deep into many subjects and concerns of disabled people no matter who they are, getting tools in trying to understand why there is a continual specter and ceaseless discriminations towards people with difference. Also what matters is the possibility of getting more people have substancial approaches and ideas of what is disability and how disabled people deal with that in their communites on a daily basis. 
  <br>
  Using resources, methology and analyses and narratives in order to bring to light and then allow a larger understanding of what is Disability by a wide ranger of people. Stories, ideas and narratives displayed below belong totally to people who are disabled or parents of disabled people and are agreeing to contribute by telling their stories.
 </span>
