--- a/index.html
+++ b/index.html
@@ -2724,30 +2724,27 @@ height: auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-   grid-gap: 2rem;
+    grid-gap: 2rem; 
     justify-content: space-between;
     justify-items: center;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(224, 223, 223, 0.556);
-    border-top: 0.13rem solid rgba(123, 226, 247, 0.836);
-    border-bottom: 0.13rem solid rgba(123, 226, 247, 0.836);
+    background: rgba(225, 225, 225, 0.618);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-   
-
 }
 
 .Burki-pics{
     display: grid;
     grid-template-columns: 0.5fr 1fr;
-    column-gap: 0.25rem;
+    column-gap: 0.9rem;
     padding: 10px;
     color: rgba(132, 132, 133, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.964);
-    border: 0.12rem solid rgba(81, 200, 243, 0.702);
+    border: 0.12rem solid rgba(134, 187, 244, 0.567);
+    border-radius: 0.4rem;
     justify-content: center;
     justify-items: center;
     text-align: left;
@@ -2762,13 +2759,15 @@ height: auto;
     justify-content: center;
     justify-items: center;
     width: 100%;
-    height: 350px;
+    height: 349px;
     padding: 15px;
     font-family: 'Kanit';
-    line-height: 17.5px;
-    font-size: 13.4px;
+    line-height: 17.35px;
+    font-size: 13.25px;
     background: #fff;
     color: rgba(79, 79, 79, 0.697);
+    border: 0.12rem solid rgba(134, 187, 244, 0.567);
+    border-radius: 0.3rem;
 }
 .Bu-pics img{
     width: 400px;
@@ -2794,7 +2793,7 @@ height: auto;
         }
 
         .Burki-pics:hover{
-            background: rgba(235, 249, 253, 0.509);
+            background: rgba(234, 237, 240, 0.461);
             transition: 0.2s linear;
         }
 
