--- a/index.html
+++ b/index.html
@@ -2733,6 +2733,7 @@ height: auto;
     background: rgba(225, 225, 225, 0.618);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    border-top: 0.2rem solid #ee5454;
 }
 
 .Burki-pics{
